--- a/index.html
+++ b/index.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8"/>
+    <link rel="icon" type="image/svg+xml" href="/vite.svg"/>
+    <link rel="preload" as="font" href="/fonts/SmileySans/SmileySans-Oblique.ttf.woff2" type="font/woff2" crossorigin="anonymous"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Vite + Vue + TS</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+    <script type="text/javascript" src="https://api.map.baidu.com/api?v=1.0&&type=webgl&ak=oMfW36WlMA4E04VWeG0430Rj6DcmqYrg">
+    </script>
+
+
+</head>
+<body>
+<div id="app"></div>
+
+<script type="module" src="/src/main.ts"></script>
+
+</body>
 </html>
 
 <style>
-
+    html, body, #app {
+        height: 100%;
+        width: 100%;
+    }
 </style>
